[gd_scene load_steps=4 format=3 uid="uid://dl3lrfam021ul"]

[ext_resource type="Script" uid="uid://cr8n54gk2qp8l" path="res://scenes/main_menu/main_menu.gd" id="1_te6vx"]
[ext_resource type="PackedScene" uid="uid://c64ufos653c4s" path="res://scenes/main_menu/bg.tscn" id="2_0ebjn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fsom3"]

[node name="MainMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_fsom3")
script = ExtResource("1_te6vx")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
ignore_rotation = false

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="Title" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer/Title"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Hatterdashery!"

[node name="MenuButtonContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/MenuButtonContainer"]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "Start Game"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/MenuButtonContainer"]
layout_mode = 2

[node name="HowToPlayButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "How To Play"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/MenuButtonContainer"]
layout_mode = 2

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "Options"

[node name="Control" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 823.0
offset_top = 717.0
offset_right = 1069.0
offset_bottom = 742.0
mouse_filter = 0
metadata/_edit_group_ = true

[node name="ArachnoCheckButton" type="CheckButton" parent="Control/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0

[node name="Label" type="Label" parent="Control/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Arachnophobia Mode"

[node name="Node" type="Node" parent="."]

[node name="Node3D" parent="Node" instance=ExtResource("2_0ebjn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4599446, 0, 1.6254646)

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer/StartGameButton" to="." method="_on_start_game_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer2/HowToPlayButton" to="." method="_on_how_to_play_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer2/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer3/OptionsButton" to="." method="_on_options_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer3/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="gui_input" from="Control/HBoxContainer" to="." method="_on_h_box_container_gui_input"]
[connection signal="pressed" from="Control/HBoxContainer/ArachnoCheckButton" to="." method="_on_arachno_check_button_pressed"]
